--- a/.github/workflows/prod-github-actions.yml
+++ b/.github/workflows/prod-github-actions.yml
@@ -19,13 +19,25 @@ jobs:
         with:
           node-version: '16.x'
 
+      - name: Get yarn cache
+        id: yarn-cache
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      - name: Cache dependencies
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.yarn-cache.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
       - name: Install dependencies
         run: |
-          npm install
-          npm install firebase-tools -g
+          yarn install --frozen-lockfile
+          yarn add firebase-tools -g
 
       - name: Build WebApp
-        run: npm run build-storybook
+        run: yarn build-storybook
 
       - name: Deploy
         run: firebase deploy --only hosting --token $FIREBASE_TOKEN
