--- a/package.json
+++ b/package.json
@@ -49,12 +49,14 @@
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/builder-vite": "^0.1.36",
     "@storybook/react": "^6.5.9",
+    "@storybook/test-runner": "^0.2.0",
     "@storybook/testing-library": "^0.0.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "@vitest/ui": "^0.15.2",
     "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
     "eslint": "^8.0.1",
@@ -65,6 +67,8 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.30.0",
+    "jest": "27",
+    "jsdom": "^20.0.0",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.1.3",
