--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "coverage": "vitest run --coverage",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "start-storybook -p 6006 --no-open",
     "build-storybook": "build-storybook --output-dir build",
     "lint": "eslint . --ext .ts"
   },
