--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     ]
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "vite-plugin-svgr": "^2.1.1"
