--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@storybook/react": "^6.5.9",
     "@storybook/test-runner": "^0.2.0",
     "@storybook/testing-library": "^0.0.13",
+    "@tailwindcss/forms": "^0.5.2",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
