--- a/package.json
+++ b/package.json
@@ -46,6 +46,12 @@
     "react-dom": "^18.0.0",
     "vite-plugin-svgr": "^2.1.1"
   },
+  "peerDependencies": {
+    "@heroicons/react": "^1.0.6",
+    "react": "^17.0.2",
+    "tailwindcss": "^3.1.3",
+    "@tailwindcss/forms": "^0.5.2"
+  },
   "devDependencies": {
     "@babel/core": "^7.18.5",
     "@storybook/addon-actions": "^6.5.9",
