--- a/.github/workflows/publish-npm-package.yml
+++ b/.github/workflows/publish-npm-package.yml
@@ -9,16 +9,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the repository
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
 
       - name: Setup node
-      - uses: actions/setup-node@v3
+        uses: actions/setup-node@v3
         with:
           node-version: '16.x'
           registry-url: 'https://registry.npmjs.org'
 
+      - name: Install dependencies
+        run: yarn
+
       - name: Publish the package
-      - run: yarn
-      - run: yarn publish --frozen-lockfile
+        run: yarn publish --frozen-lockfile
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
