--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@clarke/foton",
+  "name": "@clarke-energia/foton",
   "version": "1.11.1",
   "description": "Partículas que compõem a luz e podem ser definidos como pequenos “pacotes” que transportam a energia contida nas radiações eletromagnéticas.",
   "author": "Clarke Energia",
